[project]
name = "quic-caddy-server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lethe Lee 160", email = "lichenghaongyd@qq.com" }
]
dependencies = [
    "flask>=3.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

